Release notes for La Prestatgeria (http://apliense.xtec.cat/prestatgeria/)

More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/prestatgeria

Changes in progress
---------------------------------------------------------------------------------------



v15.04.17
-------------------------------------------------------------
- Simplified configuration files
- Moved mailer as a submodule
- Improved code for sending e-mail in llibres section
- Fixed compatibility with PHP 5.4
- Fixed import of books


v15.01.26
-------------------------------------------------------------
- Solved issue with the filter in Cataleg de llibres (AGIN 1059-2014-0007)
- Let schools to enable and disable users to make their own books (AGIN 1059-2015-0001)


v14.12.11
-------------------------------------------------------------
- Added apc.php
- Updated Zikula to version 1.3.9


v14.10.30
-------------------------------------------------------------
- Added support for md5 in password hash
- Fixed upload of images in books
- Removed PHP short tags


v14.05.26
-------------------------------------------------------------
- Fixed connection to Books databases from Books Zikula module


v14.05.12
-------------------------------------------------------------
- Updated Zikula to version 1.3.7
- Added works.php


v11.09.14
-------------------------------------------------------------
Errors solucionats:
- El valor d'un paràmetre de la configuració inicial del mòdul AdvMailer era incorrecte.

Canvis:
- S'ha actualitzat el mòdul News de la versió 2.5.2 a la versió 2.6.2.


v11.04.20
-------------------------------------------------------------
Errors solucionats:
- S'ha mogut una variable de configuració del xinha de l'aplicació de les Preguntes Més Freqüents al fitxer de configuració sessio.inc.dist.

Noves funcionalitats:
- S'ha afegit el favicon al tema de la Prestatgeria del Zikula.


v11.04.11