@@ -37,7 +37,10 @@ require_once('config.inc.php');
 
 
 // Strip slashes if MQGPC is on
-set_magic_quotes_runtime(0);
+if(get_magic_quotes_runtime()) {
+    set_magic_quotes_runtime(0);
+}
+
 if(get_magic_quotes_gpc())
 {
   $to_clean = array(&$_GET, &$_POST, &$_REQUEST, &$_COOKIE);
