@@ -5,6 +5,7 @@ development home at https://github.com/projectestac/prestatgeria
 
 Changes in progress
 ---------------------------------------------------------------------------------------
+- Fixed deprecated errors on set_magic_quotes_runtime
 
 
 
